[Headline] Fixed alignment of the subscription box

--- a/packages/headline/assets/css/screen.css
+++ b/packages/headline/assets/css/screen.css
@@ -592,6 +592,7 @@ body:not(.home-template) .gh-topic-grid .gh-card {
 .gh-subscribe {
     margin-top: 40px;
     margin-bottom: 80px;
+    text-align: center;
 }
 
 .gh-subscribe-title {
